Message for Sarie

--- a/Day-01-git-2/index.html
+++ b/Day-01-git-2/index.html
@@ -6,6 +6,10 @@
     <title>Git 2.0</title>
 </head>
 <body>
+    <!-- First commit here -->
     <h1>Git 2.0</h1>
+
+    <!-- Added within the zander Branch -->
+     <h2>Pieter Jaag vir sarie om die doring boom!!! OP een been.</h2>
 </body>
 </html>
