--- a/Day-01-git-2/index.html
+++ b/Day-01-git-2/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Git 2.0</h1>
+
+    <!-- this is my second Branch -->
+     <h3>Sarie se vir Pieter hy moet dit nou stop!</h3>
 </body>
 </html>
