--- a/Day-01-git-2/index.html
+++ b/Day-01-git-2/index.html
@@ -11,5 +11,9 @@
 
     <!-- Added within the zander Branch -->
      <h2>Pieter Jaag vir sarie om die doring boom!!! OP een been.</h2>
+
+     <!-- Adding some more code to the Zander branch -->
+    <h2>DO NOT TOUCH THIS!!!!!!</h2>
+
 </body>
 </html>
