added in some bugs

--- a/Day-01-git-2/index.html
+++ b/Day-01-git-2/index.html
@@ -17,5 +17,8 @@
 
     <!-- this is my second Branch -->
      <h3>Sarie se vir Pieter hy moet dit nou stop!</h3>
+
+     <!-- this will be reverted -->
+      <h5>Bees, ants, spiders </h5>
 </body>
 </html>
